--- a/src/views/registerForm.html
+++ b/src/views/registerForm.html
@@ -1,6 +1,17 @@
 <form id="registerForm" enctype="application/x-www-form-urlencoded">
+    <h3>Registration</h3>
+    User name : 
+    <br>
     <input name="username" type="text" ng-model="uname">
+    <br>
+    Password:
+    <br>
     <input name="password" type="text" ng-model="pwd">
+    <br>
+    Email:
+    <br>
     <input name="eamil" type="text" ng-model="email">
+    <br>
+    <br>
     <button ng-click="register()">Register</button>
 </form>
